--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Firefox" version="3.6.6" />
+  <package id="NUnit.ConsoleRunner" version="3.6.0" />
 </packages>
