--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Firefox" version="3.6.6" />
   <package id="NUnit.ConsoleRunner" version="3.6.0" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" />
 </packages>
